# fastapi-realtime-chat

./: .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  pyproject.toml
docker_compose/: app.yaml  services.yaml
src/config/: local.yaml
src/domain/: containers.py
src/domain/common/: containers.py  entities.py  events.py  exceptions.py  values.py
src/domain/messages/: events.py  exceptions.py  models.py  values.py
src/infrastructure/db/chats/: converters.py
src/infrastructure/db/chats/repositories/: base.py  mongo.py
src/infrastructure/db/repositories/: base.py  mongo.py
src/infrastructure/dependencies/: initialization.py
src/infrastructure/dtos/: chats.py  messages.py
src/logic/: containers.py  exceptions.py  mediator.py
src/logic/commands/: base.py
src/logic/commands/chats/: create_chat.py
src/logic/commands/messages/: create_message.py
src/logic/dependencies/: initialization.py
src/presentation/api/: app.py
src/presentation/api/v1/chat/: handlers.py  schemas.py
src/tests/: conftest.py
src/tests/domain/: test_messages.py
