[tool.poetry]
name = "fastapi-rabbit"
version = "0.1.0"
description = ""
authors = ["greedWizard <skavik46111@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_rabbit"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.1"
websockets = "^12.0"
pytest = "^7.4.3"
dependency-injector = "^4.41.0"

[tool.isort]
profile = "black"
line_length = 75
known_first_party = ["domain", "config", "logic", "infrastructure", "tests", "presentation"]
sections = [
    "__futures__",
    "THIRDPARTY",
    "STDLIB",
    "FASTAPI",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
